# sphinx-bootstrap-theme

./: .gitignore  .travis.yml  HISTORY.html  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.html  README.rst  TODO.html  TODO.rst  bootstrap  bundle.sh  downloads.html  examples.html  fabfile.py  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sidebar.html  tox.ini
.github/workflows/: github_pages.yaml  package.yaml  tests.yaml
_sources/: HISTORY.rst.txt  HISTORY.txt  README.rst.txt  README.txt  TODO.rst.txt  TODO.txt  downloads.rst.txt  downloads.txt  examples.txt  index.rst.txt  index.txt
_static/: bootstrap-sphinx.css  bootstrap-sphinx.js  documentation_options.js
bootstrap/: globaltoc.html  layout.html  localtoc.html  theme.conf
bootstrap/static/: bootstrap-sphinx.css  bootstrap-sphinx.css_t  bootstrap-sphinx.js
demo/: Makefile
demo/source/: TODO.rst  conf.py  example.py  example_module.rst  examples.rst  html_bootstrap_translator.rst  index.rst  maintenance.rst  more_examples.rst  sidebar.rst
demo/source/_static/: default.css  my-styles.css
demo/source/_templates/: layout.html  relations.html
demo/source/subdir/: index.rst  (+1 more)
sphinx_bootstrap_theme/: __init__.py  example_module.py  html_bootstrap_translator.py  theme.conf
sphinx_bootstrap_theme/bootstrap/: globaltoc.html  layout.html  navbar-2.html  navbar.html  navbartoc.html  relations.html  search.html  searchbox.html  sourcelink.html  theme.conf
sphinx_bootstrap_theme/static/: bootstrap-sphinx.js
subdir/: index.html
(+9 files in other folders)
