[metadata]
name = sphinx-bootstrap-theme
version = attr: sphinx_bootstrap_theme.__version__
author = Ryan Roemer
author-email = ryan@loose-bits.com
home-page = https://ryan-roemer.github.io/sphinx-bootstrap-theme/README.html
description = Sphinx Bootstrap Theme.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = sphinx, bootstrap, html, theme
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Topic :: Internet
  Topic :: Software Development :: Documentation

[bdist_wheel]
universal = 1

[options]
zip_safe = false
include_package_data = true
packages =
  sphinx_bootstrap_theme
  sphinx_bootstrap_theme.bootstrap
setup_requires =
  setuptools

[options.entry_points]
sphinx.html_themes =
  bootstrap = sphinx_bootstrap_theme
